--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "commit": "git add -A && cz"
+  },
   "private": true,
   "dependencies": {
     "next": "14.2.3",
@@ -27,6 +29,8 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.8.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
@@ -34,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nx": "20.0.1",
@@ -45,5 +50,28 @@
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog",
+      "types": {
+        "common": {
+          "description": "Common configurations for all",
+          "title": "Common"
+        },
+        "example-project": {
+          "description": "",
+          "title": "Example Project"
+        },
+        "superduper": {
+          "description": "",
+          "title": "Superduper"
+        },
+        "acers": {
+          "description": "",
+          "title": "Acers"
+        }
+      }
+    }
   }
 }
