--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongodb": "^6.9.0",
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
