--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ out
 /.vercel
 
 yarn.lock
+
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
