--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mongodb": "^6.9.0",
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-day-picker": "^9.1.4",
+    "react-day-picker": "8",
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
