--- a/package.json
+++ b/package.json
@@ -7,43 +7,34 @@
   },
   "private": true,
   "dependencies": {
-
-
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
-
-    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
-
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-
+    "daisyui": "^4.12.13",
     "date-fns": "^4.1.0",
-    "formik": "^2.4.6",
-
-    "@radix-ui/react-icons": "^1.3.0",
-
- 
-
+    "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
-
+    "formik": "^2.4.6",
+    "i": "^0.3.7",
     "lucide-react": "^0.453.0",
     "mongodb": "^6.9.0",
     "next": "14.2.3",
+    "npm": "^10.9.0",
     "react": "18.3.1",
-
     "react-day-picker": "^9.1.4",
     "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
-
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
@@ -65,7 +56,7 @@
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.23.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
