--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.3.1",
     "react-day-picker": "^9.1.4",
     "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
