--- a/apps/example-project/project.json
+++ b/apps/example-project/project.json
@@ -6,6 +6,20 @@
   "tags": [],
   "// targets": "to see all targets run: nx show project example-project --web",
   "targets": {
+    "build": {
+      "executor": "@nx/next:build",
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
+      "options": {
+        "outputPath": "dist/apps/example-project"
+      },
+      "configurations": {
+        "development": {
+          "outputPath": "apps/example-project"
+        },
+        "production": {}
+      }
+    },
     "deploy": {
       "executor": "nx:run-commands",
       "options": {
