--- a/.github/workflows/example-project.deployment.yml
+++ b/.github/workflows/example-project.deployment.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           mkdir .vercel
           cp -r ./apps/example-project/vercel.json .vercel/project.json
+          vercel env pull .env.development.local --token=${{ secrets.EXAMPLE_PROJECT_VERCEL_TOKEN }}
+          mv .env.development.local .vercel/env.development.local
 
       - name: 'Build the app'
         run: vercel build --prod
