--- a/apps/acers/project.json
+++ b/apps/acers/project.json
@@ -5,5 +5,20 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project acers --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nx/next:build",
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
+      "options": {
+        "outputPath": "dist/apps/ger-gurus"
+      },
+      "configurations": {
+        "development": {
+          "outputPath": "apps/ger-gurus"
+        },
+        "production": {}
+      }
+    }
+  }
 }
