--- a/apps/ger-gurus/tsconfig.json
+++ b/apps/ger-gurus/tsconfig.json
@@ -15,22 +15,28 @@
       {
         "name": "next"
       }
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    },
+    "include": [
+      "**/*.ts",
+      "**/*.tsx",
+      "**/*.js",
+      "**/*.jsx",
+      "../../apps/ger-gurus/.next/types/**/*.ts",
+      "../../dist/apps/ger-gurus/.next/types/**/*.ts",
+      "next-env.d.ts",
+      ".next/types/**/*.ts"
+    ],
+    "exclude": [
+      "node_modules",
+      "jest.config.ts",
+      "**/*.spec.ts",
+      "**/*.test.ts"
     ]
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js",
-    "**/*.jsx",
-    "../../apps/ger-gurus/.next/types/**/*.ts",
-    "../../dist/apps/ger-gurus/.next/types/**/*.ts",
-    "next-env.d.ts",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "jest.config.ts",
-    "**/*.spec.ts",
-    "**/*.test.ts"
-  ]
+  }
 }
