--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.9",
+    "i": "^0.3.7",
     "lucide-react": "^0.453.0",
     "mongodb": "^6.9.0",
     "next": "14.2.3",
+    "npm": "^10.9.0",
     "react": "18.3.1",
     "react-day-picker": "^9.1.4",
     "react-dom": "18.3.1",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
