acers(deploy): ready for build

--- a/apps/acers/project.json
+++ b/apps/acers/project.json
@@ -11,11 +11,11 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/ger-gurus"
+        "outputPath": "dist/apps/acers"
       },
       "configurations": {
         "development": {
-          "outputPath": "apps/ger-gurus"
+          "outputPath": "apps/acers"
         },
         "production": {}
       }
