--- a/apps/amidos/.env
+++ b/apps/amidos/.env
@@ -1,1 +1,9 @@
 MONGODB_URI=mongodb+srv://temuuujin0317:pbIbn2gWzRoZVx7H@e-commerce.gds9y.mongodb.net/?retryWrites=true&w=majority&appName=amidos
+
+
+
+CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@dozicpox6
+your_api_secret dnUPsuwUNtVrhQ2aptdgZAUsOOQ
+dozicpox6
+
+your_api_key -961922241461498
