--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "lucide-react": "^0.453.0",
     "mongodb": "^6.9.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-day-picker": "^9.1.4",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
+    "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
