--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@tabler/icons-react": "^3.20.0",
     "@types/bcrypt": "^5.0.2",
     "ably": "^2.4.1",
     "bcrypt": "^5.1.1",
@@ -24,6 +25,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.9",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
