--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@types/google.geolocation": "^0.4.35",
+    "@types/nodemailer": "^6.4.16",
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
@@ -34,16 +35,17 @@
     "mongodb": "^6.9.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
     "npm": "^10.9.0",
     "react": "18.3.1",
     "react-day-picker": "8",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
-    "sonner": "^1.5.0",
-    "swiper": "^11.1.14",
     "react-hook-geolocation": "^1.1.0",
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
+    "sonner": "^1.5.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
@@ -72,7 +74,7 @@
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.23.0",
+    "eslint": "^9.3.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
