--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "ably": "^2.4.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
