--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.9",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongodb": "^6.9.0",
     "next": "14.2.3",
     "react": "18.3.1",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^9.1.4",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
