--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@custom-react-hooks/use-geo-location": "^1.5.1",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -40,9 +41,7 @@
     "mongodb": "^6.9.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
-
     "npm": "^10.9.0",
-
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
     "react-day-picker": "^9.1.4",
@@ -56,7 +55,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
