--- a/package.json
+++ b/package.json
@@ -38,17 +38,13 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongodb": "^6.9.0",
-    "next": "14.2.3",
-
+    "next": "^15.0.2-canary.6",
     "next-themes": "^0.3.0",
     "npm": "^10.9.0",
-
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
     "react-day-picker": "^9.1.4",
     "react-dom": "18.3.1",
-
-
     "react-hook-form": "^7.53.1",
     "react-hook-geolocation": "^1.1.0",
     "react-icons": "^5.3.0",
