--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -25,6 +26,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
+    "add": "^2.0.6",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
@@ -39,11 +41,11 @@
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
+    "menubar": "^9.5.1",
     "mongodb": "^6.9.0",
     "next": "^15.0.2-canary.6",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
-
     "npm": "^10.9.0",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
@@ -55,6 +57,7 @@
     "react-hook-geolocation": "^1.1.0",
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
+    "shadcn": "^2.1.1",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
