--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tabler/icons-react": "^3.20.0",
     "@types/bcrypt": "^5.0.2",
     "@types/google.geolocation": "^0.4.35",
+    "@types/nodemailer": "^6.4.16",
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
@@ -40,10 +41,8 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongodb": "^6.9.0",
-    "next": "^15.0.2-canary.6",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
-
     "npm": "^10.9.0",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
