--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@tabler/icons-react": "^3.20.0",
     "@types/bcrypt": "^5.0.2",
@@ -40,9 +41,7 @@
     "mongodb": "^6.9.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
-
     "npm": "^10.9.0",
-
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
     "react-day-picker": "^9.1.4",
