--- a/apps/acers/tsconfig.json
+++ b/apps/acers/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*" : ["./src/*","./lib/*", "./components/ui/*", "./components/*"]
+    },
     "jsx": "preserve",
     "allowJs": true,
     "esModuleInterop": true,
