--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ably": "^2.4.1",
     "add": "^2.0.6",
     "bcrypt": "^5.1.1",
+    "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
@@ -43,21 +44,18 @@
     "lucide-react": "^0.453.0",
     "menubar": "^9.5.1",
     "mongodb": "^6.9.0",
-    "next": "^15.0.2-canary.6",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "npm": "^10.9.0",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
-
     "react-day-picker": "^9.2.0",
-
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hook-geolocation": "^1.1.0",
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
-    "shadcn": "^2.1.1",
+    "shadcn": "^2.1.2",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
@@ -88,9 +86,7 @@
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-
     "eslint": "^9.8.0",
-
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
