--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@custom-react-hooks/use-geo-location": "^1.5.1",
     "@hookform/resolvers": "^3.9.0",
+    "@next/font": "^14.2.15",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -24,6 +25,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
@@ -48,6 +50,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hook-geolocation": "^1.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
