--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.0",
     "ws": "^8.18.0",
     "yup": "^1.4.0"
   },
