--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "@custom-react-hooks/use-geo-location": "^1.5.1",
     "@hookform/resolvers": "^3.9.0",
-    "@next/font": "^14.2.15",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -41,6 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongodb": "^6.9.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "npm": "^10.9.0",
