--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@custom-react-hooks/use-geo-location": "^1.5.1",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -23,6 +24,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
+    "add": "^2.0.6",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
@@ -32,6 +34,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "form": "^0.2.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.9",
     "json-web-token": "^3.2.0",
@@ -40,9 +43,7 @@
     "mongodb": "^6.9.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
-
     "npm": "^10.9.0",
-
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
     "react-day-picker": "^9.1.4",
@@ -51,12 +52,14 @@
     "react-hook-geolocation": "^1.1.0",
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
+    "shadcn": "^2.1.1",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
