--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/uuid": "^10.0.0",
     "ably": "^2.4.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
@@ -36,6 +38,7 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0",
     "yup": "^1.4.0"
   },
