--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "npm": "^10.9.0",
+    "nuqs": "^2.0.4",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
     "react-day-picker": "^9.2.0",
