--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
     "add": "^2.0.6",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
@@ -43,10 +44,9 @@
     "embla-carousel-react": "^8.3.0",
     "form": "^0.2.5",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.9",
-    "i": "^0.3.7",
     "framer-motion": "^11.11.10",
     "google-auth-library": "^9.14.2",
+    "i": "^0.3.7",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
