--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "cmdk": "^1.0.0",
     "daisyui": "^4.12.13",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.3.0",
     "form": "^0.2.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.9",
     "i": "^0.3.7",
-    "framer-motion": "^11.11.10",
+    "embla-carousel-autoplay": "^8.3.1",
     "google-auth-library": "^9.14.2",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
