--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tabler/icons-react": "^3.20.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/uuid": "^10.0.0",
     "@types/google.geolocation": "^0.4.35",
     "@types/nodemailer": "^6.4.16",
+    "@types/uuid": "^10.0.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
     "add": "^2.0.6",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
