--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tabler/icons-react": "^3.20.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/uuid": "^10.0.0",
     "@types/google.geolocation": "^0.4.35",
     "@types/nodemailer": "^6.4.16",
+    "@types/uuid": "^10.0.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
@@ -41,27 +41,20 @@
     "daisyui": "^4.12.13",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-
+    "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.0",
     "form": "^0.2.5",
     "formik": "^2.4.6",
-
     "framer-motion": "^11.11.9",
-    "i": "^0.3.7",
-
-
     "google-auth-library": "^9.14.2",
-
-
+    "i": "^0.3.7",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "menubar": "^9.5.1",
     "mongodb": "^6.9.0",
     "next": "14.2.3",
-
     "next-themes": "^0.3.0",
-
     "npm": "^10.9.0",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
