--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.0",
     "form": "^0.2.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.9",
-    "i": "^0.3.7",
-    "embla-carousel-autoplay": "^8.3.1",
     "google-auth-library": "^9.14.2",
+    "i": "^0.3.7",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
@@ -60,6 +60,7 @@
     "nuqs": "^2.0.4",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
+    "react-datepicker": "^7.5.0",
     "react-day-picker": "^9.2.0",
     "react-dom": "18.3.1",
     "react-draggable": "^4.4.6",
@@ -67,6 +68,7 @@
     "react-hook-geolocation": "^1.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-time-picker": "^7.0.0",
     "react-use": "^17.5.1",
     "shadcn": "^2.1.2",
     "sonner": "^1.5.0",
