--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
-    "axios": "^1.7.7",
     "add": "^2.0.6",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
@@ -42,16 +42,11 @@
     "daisyui": "^4.12.13",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-
     "embla-carousel-react": "^8.3.0",
     "form": "^0.2.5",
     "formik": "^2.4.6",
-
     "framer-motion": "^11.11.10",
-
-
     "google-auth-library": "^9.14.2",
-
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
@@ -69,6 +64,7 @@
     "react-hook-geolocation": "^1.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
     "react-use": "^17.5.1",
     "shadcn": "^2.1.2",
     "sonner": "^1.5.0",
