--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "lucide-react": "^0.453.0",
     "menubar": "^9.5.1",
     "mongodb": "^6.9.0",
-    "next": "14.2.3",
+    "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
@@ -67,6 +67,7 @@
     "react-hook-geolocation": "^1.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-use": "^17.5.1",
     "shadcn": "^2.1.2",
