--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "menubar": "^9.5.1",
+    "mime": "^4.0.4",
     "mongodb": "^6.9.0",
     "next": "^15.0.2",
     "next-themes": "^0.3.0",
@@ -96,9 +97,13 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mime": "^4.0.0",
     "@types/node": "18.16.9",
+    "@types/parse-json": "^4.0.2",
+    "@types/quill": "^2.0.14",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/yargs": "^17.0.33",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.1",
