--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "framer-motion": "^11.11.10",
     "google-auth-library": "^9.14.2",
     "i": "^0.3.7",
+    "input-otp": "^1.4.0",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
@@ -55,6 +56,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
+    "npx": "^10.2.2",
     "nuqs": "^2.0.4",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
@@ -66,7 +68,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
-    "shadcn": "^2.1.2",
+    "shadcn": "^2.1.4",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
