--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-hook-geolocation": "^1.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-use": "^17.5.1",
     "shadcn": "^2.1.2",
