--- a/package.json
+++ b/package.json
@@ -46,16 +46,14 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^8.3.1",
-
     "embla-carousel-react": "^8.3.0",
+    "flowbite-react": "^0.10.2",
     "form": "^0.2.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.10",
     "google-auth-library": "^9.14.2",
-
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
-
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
