--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tabler/icons-react": "^3.20.0",
+    "@tanstack/react-table": "^8.20.5",
     "@types/bcrypt": "^5.0.2",
     "@types/google.geolocation": "^0.4.35",
     "@types/nodemailer": "^6.4.16",
