--- a/.github/workflows/amidos.deployment.yml
+++ b/.github/workflows/amidos.deployment.yml
@@ -7,6 +7,8 @@ on:
       - main
     paths:
       - apps/amidos/**
+  env:
+  NX_DISABLE_DB: true
 jobs:
   DeployApp:
     runs-on: ubuntu-latest
