--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "menubar": "^9.5.1",
     "mime": "^4.0.4",
     "mongodb": "^6.9.0",
-    "next": "^15.0.2",
+    "next": "14.2.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
