--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "mime": "^4.0.4",
     "mongodb": "^6.9.0",
     "nanoid": "^5.0.8",
-    "next": "14.2.3",
+    "next": "^15.0.3",
     "next-client-cookies": "^2.0.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
@@ -92,7 +92,7 @@
     "react-icons": "^5.3.0",
     "react-instantsearch": "^7.13.7",
     "react-parallax": "^3.5.1",
-    "react-quill": "^2.0.0",
+    "react-quill": "2.0.0-beta.2",
     "react-router-dom": "^6.27.0",
     "react-scroll-parallax": "^3.4.5",
     "react-time-picker": "^7.0.0",
