--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "private": true,
   "dependencies": {
     "@ably/asset-tracking": "^1.0.0-beta.5",
+    "@blocknote/core": "^0.19.0",
+    "@blocknote/mantine": "^0.19.0",
+    "@blocknote/react": "^0.19.0",
     "@custom-react-hooks/use-geo-location": "^1.5.1",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.0",
@@ -43,13 +46,14 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@uploadthing/react": "^7.1.0",
     "@vis.gl/react-google-maps": "^1.3.0",
-    "ably": "^2.4.1",
+    "ably": "^2.5.0",
     "add": "^2.0.6",
     "algoliasearch": "^5.12.0",
     "asynckit": "^0.4.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "bufferutil": "^4.0.8",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
@@ -79,6 +83,7 @@
     "menubar": "^9.5.1",
     "mime": "^4.0.4",
     "mongodb": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.8",
     "next": "14.2.3",
     "next-client-cookies": "^2.0.0",
@@ -87,6 +92,7 @@
     "npm": "^10.9.0",
     "npx": "^10.2.2",
     "nuqs": "^2.0.4",
+    "qrcode.react": "^4.1.0",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
     "react-datepicker": "^7.5.0",
@@ -101,23 +107,29 @@
     "react-icons": "^5.3.0",
     "react-instantsearch": "^7.13.7",
     "react-parallax": "^3.5.1",
+    "react-qr-code": "^2.0.15",
     "react-quill": "2.0.0-beta.2",
     "react-router-dom": "^6.27.0",
     "react-scroll-parallax": "^3.4.5",
+    "react-slick": "^0.30.2",
+    "react-spring": "^9.7.4",
     "react-time-picker": "^7.0.0",
     "react-use": "^17.5.1",
     "recharts": "^2.13.3",
     "shadcn": "^2.1.4",
+    "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
     "sonner": "^1.5.0",
+    "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.2.0",
     "vaul": "0.0.3",
-    "ws": "^8.18.0",
+    "ws": "7.4.6",
     "yup": "^1.4.0",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
